--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL=postgresql://postgres.pghblaezuatajsrhkvqa:[YOUR-PASSWORD]@aws-0-us-east-1.pooler.supabase.com:6543/postgres
+SUPABASE_URL=https://pghblaezuatajsrhkvqa.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=[YOUR-SERVICE-ROLE-KEY]
+OPENAI_API_KEY=[YOUR-OPENAI-API-KEY]
 PORT=8000
