--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.1
 python-multipart==0.0.18
 asyncpg==0.29.0
+supabase==2.10.0
 PyPDF2==3.0.1
 pdfplumber==0.11.4
 pytesseract==0.3.13
