--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,10 @@
-DATABASE_URL=postgresql://postgres.pghblaezuatajsrhkvqa:[YOUR-PASSWORD]@aws-0-us-east-1.pooler.supabase.com:6543/postgres
-SUPABASE_URL=https://pghblaezuatajsrhkvqa.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=[YOUR-SERVICE-ROLE-KEY]
+DATABASE_URL=postgresql://rca_user:rca_password@localhost:5432/rca_database
 OPENAI_API_KEY=[YOUR-OPENAI-API-KEY]
 PORT=8000
+
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+MINIO_SECURE=false
+
+JWT_SECRET_KEY=your-secret-key-change-this-in-production
