--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.1
 python-multipart==0.0.18
 asyncpg==0.29.0
-supabase==2.10.0
+psycopg2-binary==2.9.9
 PyPDF2==3.0.1
 pdfplumber==0.11.4
 pytesseract==0.3.13
@@ -13,3 +13,7 @@ httpx==0.28.1
 pydantic==2.10.3
 pydantic-settings==2.6.1
 reportlab==4.0.7
+passlib==1.7.4
+bcrypt==4.1.2
+python-jose[cryptography]==3.3.0
+minio==7.2.5
