--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - rca_network
 
   minio:
     image: minio/minio:latest
@@ -36,7 +38,53 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - rca_network
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: rca_backend
+    environment:
+      DATABASE_URL: postgresql://rca_user:rca_password@postgres:5432/rca_database
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin123
+      MINIO_SECURE: "false"
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY:-change-this-secret-key-in-production}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      PORT: 8000
+    ports:
+      - "8000:8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    networks:
+      - rca_network
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        VITE_API_URL: /api
+    container_name: rca_frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    networks:
+      - rca_network
+    restart: unless-stopped
 
 volumes:
   postgres_data:
   minio_data:
+
+networks:
+  rca_network:
+    driver: bridge
